--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOG_GROUP_ID=
-MONGO_DB_URI=
-OWNER_ID=
-STRING_SESSION=
+API_ID=20682925
+API_HASH=3c2ac07c46792232c4c6d0e8082a4e84
+BOT_TOKEN=7581448767:AAG8ldzHOw4Fa2t0yoZ2Gl14B5KKrSiSEU0
+LOG_GROUP_ID=-1002376361443
+MONGO_DB_URI=mongodb+srv://itsmeinnocent0001:hVjKfu2Lt8uKgsMh@cluster0.uzawrg7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+OWNER_ID=7962120226
+STRING_SESSION=BAE7mK0Aaw1OLpCbPAuWIjReXAQpoO3kspZzYvw_Yl05n5i_PBfLKRmbhoD7MJudNU82irjPcnEDt8K9U98nUtTtIDSSM-gRWluVtIZf_qE3XVQQNCsmk9BxU6i_3TZfmc2NQ177COaJKlb1VKjhQXkcS8djBAu95otvPDN5-TyCajaPYsUzbVFx9mtClCCMwAUvJlqDEUkV7P_XZlettwmPeep6QFv92eMOofTuFp1CaozljtvmOrR4WA2BmBSKEWJfbPKHHg_0DQ2ldqadkXd4WOmG4kjCmRBa_wMggWlbBJbEgHMiyYpHs_6vdNWTncZex2zR6jFj6V2Tlq-BCYhTXQVwawAAAAHD47o_AQ
